Metric Filter improvements & grafana dashboards

--- a/plugins/slo/pkg/slo/metricgroups/go_lang.yaml
+++ b/plugins/slo/pkg/slo/metricgroups/go_lang.yaml
@@ -1,3 +1,8 @@
 name: "golang metrics"
 filters:
-  - ".*go_.*"
+  - value : "^go_"
+    score: 10
+  - value : "^gc_"
+    score : 10
+  - value : ".*go.*"
+    score : 1
