Add NATS controller

--- a/config/crd/bases/ai.opni.io_opniclusters.yaml
+++ b/config/crd/bases/ai.opni.io_opniclusters.yaml
@@ -58,6 +58,11 @@ spec:
                       type: string
                   type: object
                 type: array
+              natsCluster:
+                properties:
+                  name:
+                    type: string
+                type: object
               nulogHyperparameters:
                 additionalProperties:
                   anyOf:
