--- a/packages/opni/opni/charts/templates/rbac.yaml
+++ b/packages/opni/opni/charts/templates/rbac.yaml
@@ -515,6 +515,30 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ai.opni.io
+  resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.opni.io
+  resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - monitoring.coreos.com
   resources:
   - prometheuses
