--- a/packages/opni/opni/charts/templates/logging/opensearch.yaml
+++ b/packages/opni/opni/charts/templates/logging/opensearch.yaml
@@ -18,7 +18,7 @@ spec:
       path: /etc/nkey
       secret:
         defaultMode: 420
-        secretName: opni-nats-client
+        secretName: {{ include "opni.fullname" . }}-nats-client
     - configMap:
         name: opni-preprocessing-config
       name: pluginsettings
