--- a/packages/opni/opni/charts/templates/gateway.yaml
+++ b/packages/opni/opni/charts/templates/gateway.yaml
@@ -7,6 +7,10 @@ metadata:
   labels:
     {{- include "opni.labels" . | nindent 4 }}
 spec:
+  {{- if .Values.gateway.alerting.enabled }}
+  alerting:
+    enabled: {{ .Values.gateway.alerting.enabled }}
+  {{- end}}
   hostname: {{ .Values.gateway.hostname }}
   serviceType: {{ .Values.gateway.serviceType }}
   natsCluster:
